# spiros

./: .ghc.environment.x86_64-linux-8.2.2  .gitignore  .travis.yml  CHANGELOG.md  IMPLEMENTATION.md  Makefile  NOTES.md  README.md  TODO.txt  build.sh  cabal-ghc-7-10.project  cabal-ghc-8-04.project  cabal-ghc-8-06.project  cabal-ghcjs.project  cabal-static.project  cabal.project  cabal.sh  cabal2nix.sh  clean.sh  default.nix  dependencies.dot  dependencies.sh  doctest.sh  environment.sh  generate-dependencies.sh  ghc802-build.sh  ghc841-build.sh  ghcjs-build.sh  github2nix.sh  hackage2nix.sh  haddock.sh  install.default.sh  install.manual.sh  install.sh  link-default-dot-nix.sh  maximal-environment.sh  minimal-environment.sh  new-haddock.sh  options-environment.sh  provision.sh  (+15 more)
archive/: cabal-static.project
cabal/: ghcjs.project  static.project
dist-newdante/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
docs/: NOTES.md  Old.txt  OldCode.txt  TODO.txt
enable/sources/Enable/: TemplateHaskell.hs
examples/: Examples_spiros.hs
examples/Example/: WarningValidation.hs
ghc802/: environment.sh
metadata/: dependencies.dot  dependencies.txt
nix/: default.nix  shell.nix  spiros.nix
nix/cabal/: cabal-default.project.nix  default.nix  lib.nix  options.nix
nix/cabal/types/: configuration.nix  default.nix  package-constraint.nix  profiling-detail.nix  repository.nix  source-repository.nix  version-bounds.nix
nix/etc/: spiros_only-library.nix
nix/haskell/: default.nix
nix/nixpkgs/: default.nix
nix/pkgs/: default.nix
nix/projects/: default.nix
nix/projects/static/: config.nix  default.nix  file.nix
nix/static/: cabal-static.project.nix  cabal.project.nix  default.nix  libraries.nix  shell.nix  skeletor.nix
nix/static/lib/: cabal.nix  link-statically.nix
old/release/freeze/configure/: command.sh
release/: cabal.project.freeze
release/freeze/configure/: stdout.txt
scripts/: quickstart.sh  tags.ghci
sources/: Digit.hs
sources/Data/: Digit.hs  Finite.hs
sources/Prelude/: Spiros.hs
sources/Prelude/Spiros/: Classes.hs  Enriched.hs  Exception.hs  GUI.hs  Generics.hs  Pretty.hs  Reexports.hs  System.hs  TemplateHaskell.hs  Types.hs  Utilities.hs  Validator.hs
sources/Spiros/: Enable.hs  Utilities.hs  WarningValidation.hs
sources/Spiros/WarningValidation/: ErrorValidation.hs
spiros/: LICENSE  README.md  spiros.cabal
spiros-benchmark/: README.md
spiros-executable/: README.md
spiros-library/: README.md
spiros-testsuite/: README.md
spiros/executables/: .dir-locals.el  Main.hs
spiros/executables/Example/: Spiros.hs
spiros/include/: sboo-base-feature-macros.h
spiros/share/images/: spiros.dot
spiros/sources/: .dir-locals.el  Spiros.hs
spiros/sources/Prelude/: Spiros.hs
spiros/sources/Prelude/Spiros/: Classes.hs  Enriched.hs  Exception.hs  GUI.hs  Generics.hs  Parse.hs  Pretty.hs  Reexports.hs  System.hs  TemplateHaskell.hs  Types.hs  Utilities.hs  Validator.hs
spiros/sources/Spiros/: Enable.hs  WarningValidation.hs
spiros/sources/Spiros/WarningValidation/: Bifunctor.hs  ErrorValidation.hs  Simple.hs
spiros/test/: DocTests.hs  StaticTests.hs
spiros/test/StaticTests/: Generics.hs
spiros/tests/doc/: .dir-locals.el  DocTests.hs
static/: README.md  default.nix  spiros.nix
static/cabal2nix/: spiros.nix
static/manual/: spiros.nix
test/: DocTests.hs  UnitTests.hs
test/UnitTests/: WarningValidation.hs
warning-validation/examples/Example/: WarningValidation.hs
warning-validation/sources/WarningValidation/: Bifunctor.hs  ErrorValidation.hs  Simple.hs
