cabal-version:       2.2
                     -- ^ « v2.2 » provides « common » stanzas.

build-type:          Simple

--------------------------------------------------

name:                spiros
version:             0.3.1

--------------------------------------------------
-- Information -----------------------------------
--------------------------------------------------

synopsis:            Custom Prelude (sboo / sboosali)

description:         My (@sboosali's) custom prelude.
                     .
                     Diverges slightly from base's: adding, removing, and shadowing.

category:            Prelude

--------------------------------------------------
                     
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
homepage:            http://github.com/sboosali/spiros#readme

--------------------------------------------------

tested-with: GHC == 8.6.1
           , GHC == 8.4.3
           , GHC == 8.2.2
           , GHC == 8.0.2
           , GHC == 7.10.3

           , GHCJS == 8.4.0.1

--------------------------------------------------

license:             BSD-3-Clause
copyright:           2018 Sam Boosalis
license-file:        LICENSE

--------------------------------------------------

extra-source-files: README.md

--data-files:
--  data/

--------------------------------------------------

source-repository head
  type:     git
  location: https://github.com/sboosali/spiros

--------------------------------------------------
-- Flags -----------------------------------------
--------------------------------------------------

--------------------------------------------------
-- Library ---------------------------------------
--------------------------------------------------

library

 ------------------------------

 hs-source-dirs: sources

 exposed-modules:
                 --Spiros

                 Prelude.Spiros

                 Prelude.Spiros.Reexports
                 Prelude.Spiros.Utilities
                 Prelude.Spiros.Classes
                 Prelude.Spiros.Types

 other-modules:

                 Prelude.Spiros.Compatibility
                 Prelude.Spiros.Enriched
                 Prelude.Spiros.Exception
                 Prelude.Spiros.GUI
                 Prelude.Spiros.Generics
                 Prelude.Spiros.Parse
                 Prelude.Spiros.System
                 Prelude.Spiros.Validator

------------------------------

 if impl(ghc >= 8.0)
    exposed-modules:
                 Prelude.Spiros.Pretty

 ------------------------------

 if impl(ghc >= 8.2)
    hs-source-dirs: other-sources

    exposed-modules:
                    Data.Digit
                    -- requires -XDerivingStrategies

 ------------------------------

 include-dirs:     include
 install-includes: include/sboo-base-feature-macros.h

 ------------------------------

 build-depends:
               base                 >= 4.7   && <5.0
               
             , generic-deriving >= 1.11
    -- for Generics.Deriving.Semigroup

             , template-haskell     >= 2.10

  --TODO , clock 

             , string-conv

  -- , protolude            >= 0.2.1
  -- -- ^ string-conv
  -- -- protolude doesn't cross-compile onto android, because of `clock`

  -- , basic-prelude
  -- --  extra symbols
  -- , base-prelude
  -- --  all of base, modulo conflicting symbols
  -- , mtl-prelude
  -- --  Reexports of most definitions from \"mtl\" and \"transformers\".

             , safe
             --, safe-exceptions 
    -- re-exports exceptions

             , mtl
             , transformers

             , text
             , bytestring

             , containers
             , vector

             , time
             , process
             , directory
             , cpuinfo >= 0.1.0.1

  -- , shake
  -- , optparse-applicative >= 0.10  && <0.13
  -- , optparse-generic     >= 1.1.0 && <1.2

             , exceptions
             , hashable   >= 1.2.5.0

             , semigroups >= 0.16.2
    -- 0.16.2 introduces Data.Semigroup.Generic

    -- for generically-deriving 
    -- TODO when was nonempty list and semigroup introduced into base? 

             , stm
             , vinyl
             , split
             , data-default-class
             , unordered-containers

             , case-insensitive

             , prettyprinter
             , show-prettyprint

                   
  -- ??

  -- , async
  -- , parallel

  -- , interpolatedstring-perl6
  -- needs haskell-src-exts, which is sloooooooooow to build (~1h)
  
 if impl(ghc >= 8.2)
    build-depends:
                  deepseq      >= 1.4.3
                  -- NFData1, NFData2
 else
    build-depends:
                  deepseq      >= 1.0

 ------------------------------

 default-language: Haskell2010

 default-extensions: CPP
                   , PackageImports

 ------------------------------

 if impl(ghc >= 7.4)
    default-extensions: ConstraintKinds
                   
 if impl(ghc >= 8.0)
    default-extensions: TemplateHaskellQuotes
                        DuplicateRecordFields
                        DeriveLift

 if impl(ghc >= 8.2)
    default-extensions: DeriveLift
                        DeriveAnyClass

 if impl(ghc >= 8.4)
    default-extensions: DerivingStrategies

 ------------------------------

 ghc-options:         -Wall

 if impl(ghc >= 8.2)
    ghc-options: -Wcpp-undef

--------------------------------------------------
-- Tests -----------------------------------------
--------------------------------------------------

-- test-suite doctest

--  if flag(test-doctest) && impl(ghc)
--     buildable: True
--  else
--     buildable: False   

--  hs-source-dirs:      test
--  main-is:             DocTests.hs

--  type:                exitcode-stdio-1.0
--  default-language:    Haskell2010

--  ghc-options:         -Wall 

--  build-depends:
--     base
--   , spiros
--   , doctest

-- --------------------------------------------------

-- test-suite unit

--  if impl(ghc >= 8.0)
--     buildable: True
--  else
--     buildable: False   

--  hs-source-dirs:      test
--  main-is:             UnitTests.hs
--  other-modules:
--   UnitTests.WarningValidation

--  type:                exitcode-stdio-1.0
--  default-language:    Haskell2010

--  ghc-options:         -Wall 

--  build-depends:
--     base
--   , spiros
--   , tasty
--   , tasty-hunit

-- --------------------------------------------------

-- test-suite static
           
--  if flag(test-static)
--     buildable: True
--  else
--     buildable: False

--  hs-source-dirs:      test
--  main-is:             StaticTests.hs
--  other-modules:
--   StaticTests.Generics

--  type:                exitcode-stdio-1.0
--  default-language:    Haskell2010
--  ghc-options:         -Wall 

--  build-depends:
--     base
--   , spiros

-- --------------------------------------------------
